WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299454
[WebDriver] "no such frame" errors while running WPT via wptrunner
https://bugs.webkit.org/show_bug.cgi?id=299454
Summary
[WebDriver] "no such frame" errors while running WPT via wptrunner
Anuj Panta
Reported
2025-09-24 10:55:46 PDT
flaky wpt tests (testing infrastructure)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-24 10:56:04 PDT
<
rdar://problem/161260591
>
Anuj Panta
Comment 2
2025-09-24 11:07:55 PDT
<
rdar://problem/141976874
>
Anuj Panta
Comment 3
2025-09-24 11:08:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51268
EWS
Comment 4
2025-09-30 11:41:56 PDT
Committed
300768@main
(12774870218c): <
https://commits.webkit.org/300768@main
> Reviewed commits have been landed. Closing PR #51268 and removing active labels.
EWS
Comment 5
2025-10-03 13:46:17 PDT
Committed
297297.509@safari-7622-branch
(082ce33b69fb): <
https://commits.webkit.org/297297.509@safari-7622-branch
> Reviewed commits have been landed. Closing PR #3733 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug