[WebDriver] "no such frame" errors while running WPT via wptrunner https://bugs.webkit.org/show_bug.cgi?id=299454 rdar://141976874

Reviewed by Sam Sneddon and Matthew Finkel.

WebDriver frame handles were being cleared on every provisional load failure, including
some HTTPS upgrade failures that WebKit retries internally, leading to missing frame
issues. Checking the willInteranllyHandleFailure parameter in
didFailProvisionalLoadForFrameShared makes sure we correctly handle internal upgrade
retries without breaking frame tracking.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didFailProvisionalLoadForFrameShared):

Canonical link: https://commits.webkit.org/300768@main